# stellar-ibc-eureka

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  STRATEGY.md  docker-compose.yml  hermes-config.toml
contracts/cosmwasm/light-client/: Cargo.toml
contracts/cosmwasm/light-client/src/: entrypoint.rs  error.rs  lib.rs  msg.rs  store.rs  tests.rs
contracts/cosmwasm/light-client/tests/: ics20_transfer_flow.rs
contracts/soroban/: Cargo.toml  README.md
contracts/soroban/ibc-router/src/: test.rs
contracts/soroban/ibc-transfer/: Cargo.toml
contracts/soroban/ibc-transfer/src/: lib.rs  test.rs
contracts/soroban/ibc-transfer/test_snapshots/test/: acknowledge_packet_with_error_ack_refunds_sender.1.json  acknowledge_packet_with_success_ack_leaves_escrow_released.1.json  initiate_transfer_escrows_and_emits_packet.1.json  initiate_transfer_over_cap_is_rejected.1.json  initiate_transfer_rejects_insufficient_balance.1.json  initiate_transfer_under_cap_accumulates_usage.1.json  mint_and_balance_of_round_trip.1.json  rate_limit_unset_denom_is_unlimited.1.json  set_rate_limit_stores_cap_and_starts_at_zero_usage.1.json
contracts/soroban/light-clients/attestation/test_snapshots/test/: check_for_misbehaviour_detects_conflicting_timestamp.1.json  check_for_misbehaviour_idempotent_for_same_timestamp.1.json  initialise_stores_client_state_and_consensus_state.1.json  update_state_advances_height_with_quorum.1.json  update_state_on_misbehaviour_freezes_client.1.json  update_state_rejected_once_frozen.1.json  update_state_rejects_below_quorum.1.json  (+7 more)
contracts/soroban/light-clients/tendermint/: README.md
contracts/soroban/light-clients/tendermint/src/: lib.rs
contracts/soroban/tests/: Cargo.toml
contracts/soroban/tests/src/: e2e.rs
contracts/soroban/tests/test_snapshots/e2e/: cosmos_to_stellar_recv_credits_receiver_and_writes_ack.1.json  duplicate_recv_packet_is_rejected.1.json  multi_packet_recv_distinct_sequences_all_credit.1.json  packet_commitment_present_after_send_absent_for_unknown.1.json  stellar_to_cosmos_round_trip_with_success_ack.1.json
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: config.rs  lib.rs  main.rs  rpc.rs  runner.rs  state.rs
crates/api/src/endpoints/: account.rs  balance.rs  mod.rs
crates/api/src/endpoints/tx/: mod.rs  types.rs
crates/api/src/services/: balance.rs  clients.rs  events.rs  hermes.rs  ledgers.rs  mod.rs  tx.rs
crates/api/src/services/cosmos/: client.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: api_client.rs  conversion.rs  lib.rs  rpc.rs  storage.rs  types.rs
crates/core/src/ibc/: commitment.rs  event.rs  mod.rs  smt.rs  soroban.rs  state.rs
crates/gateway/: Cargo.toml  Dockerfile  build.rs
crates/gateway/proto/: stellar_gateway.proto
crates/gateway/src/: config.rs  event_decode.rs  lib.rs  main.rs  msg.rs  proto.rs  query.rs  rpc.rs  runner.rs  state.rs  state_tracker.rs
crates/gateway/src/api/: account.rs
crates/ibc/: Cargo.toml
crates/ibc/src/: actions.rs  error.rs  lib.rs  msg.rs  proof.rs  smt.rs  storage.rs
crates/ibc/src/context/: client.rs  router.rs  token_transfer.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: gateway_tests.rs  main.rs  pb.rs
crates/integration-tests/src/gateway/: msg.rs
crates/osmosis/: Cargo.toml  README.md
crates/osmosis/assets/: setup.sh
crates/osmosis/src/: config.rs  health.rs  lib.rs  lifecycle.rs  main.rs
crates/tests/: Cargo.toml
crates/tests/src/api/: endpoints.rs
crates/tests/src/gateway/: mod.rs  msg.rs  query.rs
eureka/: Cargo.toml  README.md
eureka/src/: config.rs  logger.rs  main.rs  probe.rs  run.rs  shared.rs
eureka/src/accounts/: mod.rs
eureka/src/balances/: mod.rs
eureka/src/clients/: cosmos.rs  counterparty.rs  list.rs  mod.rs  stellar.rs
eureka/src/contracts/: build.rs  config.rs  deploy.rs  deploy_all.rs  invoke.rs  mod.rs  upload.rs  wasm.rs
eureka/src/cosmos/: config.rs  mod.rs
eureka/src/gateway/: mod.rs  query.rs
eureka/src/hermes/: container.rs  keys.rs  mod.rs
eureka/src/logs/: mod.rs
eureka/src/ops/: check.rs  config.rs  install.rs  mod.rs  stack.rs  start.rs  status.rs
eureka/src/stellar/: config.rs
eureka/src/transfer/: mod.rs
eureka/src/tx/: clients.rs  msg.rs  query.rs
gateway/: Cargo.toml
gateway/modules/: Cargo.toml
gateway/modules/src/: client.rs  counterparty.rs  event.rs  lib.rs  packet.rs  query.rs
gateway/src/: main.rs  state.rs
gateway/src/api/: account.rs
interstellar/: Cargo.toml  README.md
interstellar/src/: check.rs  config.rs  install.rs  logger.rs  main.rs  run.rs  service.rs  shared.rs  stack.rs  start.rs  tools.rs
interstellar/src/accounts/: mod.rs
interstellar/src/api/: container.rs  mod.rs
interstellar/src/balances/: mod.rs
interstellar/src/clients/: mod.rs
interstellar/src/contracts/: deploy_all.rs  mod.rs  upload.rs  wasm.rs
interstellar/src/cosmos/: config.rs  mod.rs  tx.rs
interstellar/src/demo/: mod.rs
interstellar/src/gateway/: container.rs  mod.rs
interstellar/src/hermes/: container.rs  keys.rs  mod.rs
interstellar/src/logs/: mod.rs
interstellar/src/ops/: mod.rs  start.rs
interstellar/src/query/: mod.rs
interstellar/src/services/: mod.rs
interstellar/src/services/cosmos/: config.rs  mod.rs  tx.rs
interstellar/src/services/cosmos/assets/: default-config.json  setup.sh
interstellar/src/services/gateway/: config.rs  mod.rs
interstellar/src/services/hermes/: config.rs  container.rs  keys.rs  mod.rs
interstellar/src/services/stellar/: config.rs
interstellar/src/test/: mod.rs
interstellar/src/tests/: counterparty.rs  mod.rs  query.rs  transfer.rs
interstellar/src/transfer/: mod.rs
interstellar/src/tx/: mod.rs
interstellar/src/tx/clients/: cosmos.rs  counterparty.rs  mod.rs  stellar.rs
interstellar/src/tx/contracts/: build.rs  config.rs  deploy_all.rs  mod.rs  upload.rs  wasm.rs
interstellar/src/tx/query/: balances.rs  clients.rs  mod.rs
interstellar/src/tx/transfer/: mod.rs
light-client/: Cargo.toml
light-client/src/: client_type.rs  lib.rs
(+182 files in other folders)
