[workspace]
members = [
    "types",
    "verifier",
    "light-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cardano-foundation/stellar-ibc"
rust-version = "1.81.0"

[workspace.dependencies]
ibc-core = { version = "0.57.0", default-features = false }
ibc-client-cw = { version = "0.57.0", default-features = false }
ibc-client-wasm-types = { version = "0.57.0", default-features = false }
cosmwasm-std = { version = "2.1.0", default-features = false }
cosmwasm-schema = { version = "2.1.0", default-features = false }
stellar-xdr = { version = "22.1.0", default-features = false, features = ["curr", "alloc"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
prost = { version = "0.13.1", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["from", "display"] }
stellar-ibc-types = { path = "types", default-features = false }
stellar-ibc-verifier = { path = "verifier", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = 2 }

[workspace.lints.clippy]
use_self = "warn"
