[workspace]
members = [
    "crates/ibc",
    "crates/gateway",
    "crates/core"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/amandagonsalves/stellar-ibc"
rust-version = "1.81.0"

[workspace.dependencies]
ibc = { version = "0.57.0", features = ["serde"] }
ibc-core = { version = "0.57.0", features = ["serde"] }

ibc-derive = "0.10.1"
ibc-middleware-module = { version = "0.2.0" }
ibc-middleware-module-macros = { version = "0.2.0" }
ibc-middleware-overflow-receive = { version = "0.5.0" }
ibc-middleware-packet-forward = { version = "0.10.0", features = ["borsh"] }
ibc-testkit = { version = "0.57.0", default-features = false }
ics23 = "0.12"

proptest = "=1.6"
proptest-state-machine = "=0.3.1"
prost = "0.14"
prost-types = "0.13"

tendermint = {version = "0.40.3", features = ["secp256k1"]}
tendermint-config = "0.40.3"
tendermint-light-client = "0.40.3"
tendermint-proto = "0.40.3"
tendermint-rpc = {version = "0.40.3", default-features = false}

soroban-client = "0.5.6"
soroban-sdk = "26.0.0"
stellar-strkey = "0.0.16"

tonic = "0.14.6"
tonic-build = "0.14"
tonic-health = "0.14.1"
tonic-prost = "0.14.6"
tonic-reflection = "0.14.1"

async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["time", "rt-multi-thread", "macros", "sync"] }
axum = "0.8.9"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

sha3 = "0.11.0"
hex = "0.4"

chrono = "0.4.44"
regex = "1.12.3"
thiserror = "1"
anyhow = "1"
config = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

stellar-ibc-core = { path = "crates/core" }
stellar-ibc = { path = "crates/ibc" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = 2 }

[workspace.lints.clippy]
use_self = "warn"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
overflow-checks = true
