[package]
name = "stellar-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
prost.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
soroban-client.workspace = true
soroban-sdk.workspace = true
stellar-strkey.workspace = true
tokio.workspace = true
tonic.workspace = true

http-body-util = "0.1.0"
dotenvy.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }