[package]
name = "interstellar"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Caribic-style orchestrator CLI for the Stellar<->Cosmos IBC bridge"

[[bin]]
name = "interstellar"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
indicatif = "0.17.8"
cosmrs = { workspace = true }
ibc-proto = { workspace = true }
prost = "0.13"
stellar-strkey = { workspace = true }
ed25519-dalek = "2"
