[workspace]
members = [
    "light-clients/*",
    "ibc-transfer",
    "ibc-router",
    "tests"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/amandagonsalves/stellar-ibc"
rust-version = "1.81.0"

[workspace.dependencies]
soroban-sdk = "26.0.0"

stellar-mock-light-client = { path = "light-clients/mock" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = 2 }

[workspace.lints.clippy]
use_self = "warn"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
overflow-checks = true

[profile.contract]
overflow-checks = true
inherits = "release"
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true