[package]
name = "stellar-api"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Standalone HTTP/REST API service for the Stellar IBC stack"

[[bin]]
name = "stellar-api"
path = "src/main.rs"

[dependencies]
stellar-ibc-core = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
