[package]
name = "stellar-api"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Standalone HTTP/REST API service for the Stellar IBC stack"

[[bin]]
name = "stellar-api"
path = "src/main.rs"

[dependencies]
stellar-ibc-core = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

reqwest = { workspace = true }
cosmrs = { workspace = true }
ibc-proto = { workspace = true }
prost = "0.13"
regex = { workspace = true }
