[package]
name = "stellar-ibc-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Shared RPC + SMT + ICS-24 helpers used by the Stellar Hermes gateway"

[dependencies]
soroban-client = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
prost = "0.13"
ibc = { workspace = true }
ibc-proto = { version = "0.51", default-features = false, features = ["std"] }
ics23 = "0.12"
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
