[package]
name = "stellar-ibc"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = ""

[lib]
crate-type = ["rlib"]

[dependencies]
ibc        = { workspace = true }
ibc-derive = { workspace = true }
prost      = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
tracing    = { workspace = true }
