[package]
name = "stellar-osmosis"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Bootstraps and manages a local Osmosis appchain for stellar-ibc devnets via docker compose"

[[bin]]
name = "stellar-osmosis"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
