[package]
name = "light-client-wasm"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "08-wasm Stellar light client deployable on a Cosmos SDK chain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std    = { version = "2.1", default-features = false, features = ["std"] }
prost           = { workspace = true }
sha2            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
ed25519-dalek   = { version = "2", default-features = false, features = ["std"] }
cw-multi-test   = { version = "2", features = ["cosmwasm_2_1"] }
