[package]
name = "soroban-contracts-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[workspace]

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils"] }
stellar-ibc-router = { path = "../../contracts/soroban/ibc-router" }
stellar-ibc-transfer = { path = "../../contracts/soroban/ibc-transfer" }
stellar-mock-light-client = { path = "../../contracts/soroban/light-clients/mock" }
