[package]
name = "soroban-contracts-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-ibc-router = { path = "../ibc-router" }
stellar-ibc-transfer = { path = "../ibc-transfer" }
stellar-mock-light-client = { path = "../light-clients/mock" }
